# fastapi-graphql-next-docker

./: Makefile  docker-compose.yml
backend/: Dockerfile
backend/app/: Makefile  main.py  pyproject.toml
backend/app/api/: init_data.py  models.py
frontend/: Dockerfile  package.json  tsconfig.json
