[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["mikana0918 <shogo.kusuhara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
strawberry-graphql = "^0.87.2"
SQLAlchemy = "^1.4.27"
graphene = "<3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
